k8s/cscms-storage/cscms-storage-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cscms-storage-depl
spec:
  selector:
    matchLabels:
      app: cscms-storage-depl
  template:
    metadata:
      labels:
        app: cscms-storage-depl
    spec:
      volumes:
        - name: temp-storage-volume
          azureDisk:
            kind: Managed
            diskName: cscms-temp-storage-disk
            diskURI: /subscriptions/599484bf-47d6-44f0-a3b8-d80b8c8637d6/resourcegroups/MC_cscms.me_cscms-services_southeastasia/providers/Microsoft.Compute/disks/cscms-temp-storage-disk
      containers:
      - name: cscms-storage-depl
        image: thetkpark/cscms-storage
        resources:
          limits:
            memory: "200Mi"
            cpu: "40m"
          requests:
            memory: "40Mi"
            cpu: "10m"
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: temp-storage-volume
            mountPath: /mnt/storage-disk
            readOnly: false
        livenessProbe:
          exec:
            command:
              - cat
              - /tmp/cscms-storage-healthy
          initialDelaySeconds: 3
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 5000
          initialDelaySeconds: 5
