k8s/cscms-storage/cscms-storage-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: cscms-storage-srv
spec:
  selector:
    app: cscms-storage-depl
  ports:
  - port: 5000
    targetPort: 5000
