k8s/cscms-storage/cscms-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cscms-storage-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cscms-storage-depl
  template:
    metadata:
      labels:
        app: cscms-storage-depl
    spec:
      volumes:
        - name: cscms-storage-vol
          persistentVolumeClaim:
            claimName: cscms-storage-pvc
      containers:
      - name: cscms-storage-depl
        image: thetkpark/cscms-storage
        resources:
          limits:
            memory: "200Mi"
            cpu: "50m"
          requests:
            memory: "40Mi"
            cpu: "10m"
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: cscms-storage-vol
            mountPath: /mnt/storage-disk
            readOnly: false
            subPath: files
        livenessProbe:
          exec:
            command:
              - cat
              - /tmp/cscms-storage-healthy
          initialDelaySeconds: 3
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 5000
          initialDelaySeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: cscms-storage-srv
spec:
  selector:
    app: cscms-storage-depl
  ports:
  - port: 5000
    targetPort: 5000
