k8s/cscms-storage/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`storage.cscms.me`) 
    kind: Rule
    services:
    - name: cscms-storage-srv
      kind: Service
      port: 5000
